--- a/indiceframes.html
+++ b/indiceframes.html
@@ -134,7 +134,7 @@ article h2, article p, article hr {
  <center>
  <font color="white" size="4.5" face="justify" >
 <a name="nombre"></a>
- 
+
 <center><article>
 <embed src="musica de fondo.mp3" height="0" width="0" volume="65"></embed>
 
@@ -143,7 +143,7 @@ article h2, article p, article hr {
 Los ranfástidos (Ramphastidae) conocidos comúnmente como tucanes, diotedé o diostedé.<br><br></font>
 <a name="distribucion">
 
-<center><embed src="El Tucán.mp4" height="250" width="450" volume="65"></embed></center>
+<center><embed src="Documental de Tucanes.mp4" height="250" width="450" volume="60"></embed></center>
 
 <center><br><br><p> <span style="color:#936">DISTRIBUCION.</span><br><br> </center>
 <p>El tucán pico iris está distribuido desde el <span style="color:yellow"><u>sur de México hasta Venezuela y Colombia.</u></span> Habitan en las copas de los árboles de bosques tropicales, subtropicales y selvas lluviosas de tierras bajas, se les encuentra en alturas hasta de 1,900 m. 
@@ -264,6 +264,13 @@ Aunado a esto, están los factores causados por el hombre.
 <br><br><p><span style="color:#936"> REFLEXION.<br><br> 
 <p>Los tucanes son en realidad una especie en peligro de extinción debido a que su hábitat está siendo destruido por la eliminación de grandes trozos de selva, 
 pero como los tucanes pueden adaptarse tan rápidamente han sido capaces de sobrevivir.
+
+
+
+
+
+
+
 
 </div>
 </body>
